Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0 Beta3
-
None
-
Linux
-
-
49063c34d6314c59ec9529550e0639832796372e (qt/qtbase/5.14)
Description
Such call is segfaulting `.toTimeZone(QTimeZone())`. Indeed, looking at the code, it is making the date time invalid in `::setTimeZone()`, but it is calling `::fromMSecsSinceEpoch()` anyway, where line 4166, it is acessing internal of the `m_timeZone` object without checking that this internal exists.